--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Base</title>
+    <title>Módulo 3, Drilling N°6: Jardín Infantil</title>
     <!-- CSS STYLES -->
-    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="assets/css/main.css" />
     <!-- FONT AWESOME KIT -->
     <script
@@ -15,8 +20,55 @@
     ></script>
   </head>
   <body>
-    <h1>Base</h1>
+    <main class="container bg-white shadow p-5">
+      <h1 class="text-center fw-semibold mb-4">Equipo</h1>
+      <p id="listado"></p>
+
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col">
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Nombre por agregar"
+              aria-label="Nombre por agregar"
+              aria-describedby="btnAgregar"
+              id="agregar"
+              name="agregar"
+            />
+            <button
+              class="btn btn-outline-success"
+              type="button"
+              id="btnAgregar"
+            >
+              Agregar
+            </button>
+          </div>
+        </div>
+        <div class="col">
+          <div class="input-group mb-3">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Nombre por borrar"
+              aria-label="Nombre por borrar"
+              aria-describedby="btnBorrar"
+              id="borrar"
+              name="borrar"
+            />
+            <button class="btn btn-outline-danger" type="button" id="btnBorrar">
+              Borrar
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
     <!-- SCRIPTS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
